--- a/css/styles.css
+++ b/css/styles.css
@@ -46,14 +46,24 @@ button {
   margin: 6px;
   border: 1px solid transparent;
   padding: .5rem 1rem;
-  color: var(--color-keys);
+  color:var(--color-keys-light);
   font-size: var(--font-size-medium);
-  background-color: var(--color-keys-light);
+  background-color: var(--color-keys);
   border-radius: 5px;
+  border: 1px white solid;
   -webkit-transition: var(--transition);
   -o-transition: var(--transition);
   transition: var(--transition);
 }
+
+button:not([class]):hover {
+  background-color: rgb(132, 139, 143);
+  box-shadow: 0 0 4px black;
+  border: 1px transparent solid;
+  
+  cursor: pointer;
+}
+
 
 .main-container {
   display: flex;
@@ -86,6 +96,9 @@ button {
   color: transparent;
   background: var(--color-neutral-light);
   border-radius: 5px;
+	
+  transition: background .3s;
+  transition: transform .3s;
 }
 
 .space {
@@ -95,6 +108,16 @@ button {
 .show {
   color: #000;
   background-color: #76CE82;
+  transform: rotateY(1turn);	
+}
+
+#phrase div {
+  display: inline-block;
+  width: max-content;
+}
+
+#phrase {
+  z-index: 1;
 }
 
 /* Keyboard */
@@ -104,11 +127,21 @@ button {
   justify-content: center;
 }
 
-.chosen {
+.chosen,
+.wrong {
   background: var(--color-neutral);
   border-radius: 5px;
   font-size: var(--font-size-medium);
   color: #FFFFFF;
+  border: 1px transparent solid;
+}
+
+.chosen {
+  background: var(--color-neutral);
+}
+
+.wrong {
+  background: var(--color-lose);
 }
 
 .btn__reset {
@@ -118,6 +151,20 @@ button {
   border-radius: 5px;
   font-size: var(--font-size-medium);
 }
+
+.btn__reset:hover {
+  color: white;
+  box-shadow: 0 0 8px 3px white;
+  cursor: pointer;
+}
+.btn__reset[disabled]:hover,
+.btn__reset[disabled] {
+  color: white;
+  
+  text-shadow: none;
+  box-shadow: none;
+}
+
 
 /* Overlay */
 
@@ -132,6 +179,18 @@ button {
   left: 0;
   right: 0;
   border-radius: 5px;
+}
+
+#overlay.fadeIn {
+  opacity: 1;
+  visibility: visible;
+
+  transition: opacity 1.5s, visibility 0s 0s;
+}
+
+#overlay.fadeOut {
+  opacity: 0;
+  visibility: hidden;
 }
 
 .title {
